# conv-demo

./: Dockerfile  MNIST_Digit_CNN_model1.ipynb  MNIST_Digit_CNN_model2.ipynb  README.md  docker-compose.yml  main.py  pyproject.toml
model/: keras_metadata.pb
model1/: saved_model.pb
model1/variables/: variables.index
model2/: keras_metadata.pb  saved_model.pb
model2/variables/: variables.data-00000-of-00001  variables.index
static/: convolution.js  mnist.js
templates/: index.html
